--- a/src/app/new-component/new-component.component.scss
+++ b/src/app/new-component/new-component.component.scss
@@ -2,9 +2,9 @@
     flex: 1 1 auto;
 }
 .logo {
-    height: 70px;
+    height: 62px;
 }
 .title{
-   margin-left: 40%;
-   font-size: 45px;
+    color: rgba(33, 119, 115, 0.781);
+   font-size: 40px;
 }
