--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+// for bootstrap using 
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
