--- a/src/app/new-component/new-component.component.html
+++ b/src/app/new-component/new-component.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="wasn" class="mat-elevation-z6">
     <img class="logo" src="./assets/images/SALogo.png">
-    <h2 class="title">SONATEL<br>ACADEMY </h2> 
+    <h2 class="title">SONATEL<br>ACADEMY </h2>
 
     <div class="spacer"></div>
     <div>
@@ -8,8 +8,9 @@
         <a mat-button>Services</a>
         <a mat-button>About us</a>
         <a mat-button>Projects</a>
-        <a mat-raised-button color="accent" routerLink="/login">Sign up</a> 
+        <a mat-raised-button color="accent" (click)="deconnexion()">Logout</a>
+
 
     </div>
-    
+
 </mat-toolbar>
